--- a/package.json
+++ b/package.json
@@ -5,23 +5,29 @@
   "main": "server.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "start:dev": "npm run dev",
-    "start": "npm run build && node server.js",
-    "server": "nodemon server.js --ignore client",
-    "build": "npm run build",
-    "install": "npm install",
-    "client": "npm start"
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server nodemon server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install",
+    "client": "cd client && npm start"
   },
   "keywords": [],
   "author": "Jordan Cardenas",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.23.0",
     "express": "^4.17.1",
+    "idb": "^7.1.1",
     "if-env": "^1.0.4"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "concurrently": "^5.3.0",
+    "css-loader": "^6.7.4",
+    "nodemon": "^2.0.4",
+    "webpack": "^5.83.1",
+    "webpack-dev-server": "^4.15.0",
+    "webpack-pwa-manifest": "^4.0.0"
   },
   "repository": {
     "type": "git",
