--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,17 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "babel": "^6.23.0",
+        "build": "^0.1.4",
+        "concurrently": "^8.0.1",
+        "express": "^4.18.2",
+        "idb": "^7.1.1"
     },
     "devDependencies": {
-        "nodemon": "^2.0.4"
+        "css-loader": "^6.7.4",
+        "nodemon": "^2.0.4",
+        "webpack": "^5.83.1",
+        "webpack-dev-server": "^4.15.0",
+        "webpack-pwa-manifest": "^4.0.0"
     }
 }
