--- a/package.json
+++ b/package.json
@@ -16,16 +16,24 @@
   "author": "Jordan Cardenas",
   "license": "ISC",
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^0.20.0",
+    "@codemirror/lang-javascript": "^0.20.1",
+    "@codemirror/state": "^0.20.1",
+    "@codemirror/theme-one-dark": "^0.20.0",
     "babel": "^6.23.0",
+    "codemirror": "^6.0.1",
     "express": "^4.17.1",
     "idb": "^7.1.1",
     "if-env": "^1.0.4"
   },
   "devDependencies": {
+    "compression-webpack-plugin": "^10.0.0",
     "concurrently": "^5.3.0",
     "css-loader": "^6.7.4",
     "nodemon": "^2.0.4",
     "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
     "webpack-pwa-manifest": "^4.0.0"
   },
