--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "x.x.x"
+  },
   "scripts": {
     "dev": "webpack-dev-server",
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
@@ -25,7 +28,8 @@
     "codemirror": "^6.0.1",
     "express": "^4.17.1",
     "idb": "^7.1.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "html-webpack-plugin": "^x.x.x"
   },
   "devDependencies": {
     "compression-webpack-plugin": "^10.0.0",
