--- a/package.json
+++ b/package.json
@@ -28,18 +28,19 @@
     "codemirror": "^6.0.1",
     "express": "^4.17.1",
     "idb": "^7.1.1",
-    "if-env": "^1.0.4",
-    "html-webpack-plugin": "^x.x.x"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
     "compression-webpack-plugin": "^10.0.0",
     "concurrently": "^5.3.0",
     "css-loader": "^6.7.4",
+    "html-webpack-plugin": "^5.5.1",
     "nodemon": "^2.0.4",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
-    "webpack-pwa-manifest": "^4.0.0"
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "repository": {
     "type": "git",
