--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "if-env": "^1.0.4"
   },
   "devDependencies": {
+    "babel-loader": "^9.1.2",
     "compression-webpack-plugin": "^10.0.0",
     "concurrently": "^5.3.0",
     "css-loader": "^6.7.4",
