--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "codemirror": "^6.0.1",
     "express": "^4.17.1",
     "idb": "^7.1.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "webpack": "^5.84.1"
   },
   "devDependencies": {
     "babel-loader": "^9.1.2",
