--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "x.x.x"
+    "node": "16.5.0"
   },
   "scripts": {
-    "dev": "webpack-dev-server",
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
-    "install": "cd client && npm install",
+    "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start"
   },
   "keywords": [],
@@ -28,8 +27,7 @@
     "codemirror": "^6.0.1",
     "express": "^4.17.1",
     "idb": "^7.1.1",
-    "if-env": "^1.0.4",
-    "webpack": "^5.84.1"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
     "babel-loader": "^9.1.2",
